--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,8 +1,7 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 10s
 
 scrape_configs:
-  - job_name: "passman-be"
+  - job_name: "otel-collector"
     static_configs:
-      - targets:
-          - localhost:4318
+      - targets: ["otel-collector:9464"]
