--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,7 +1,8 @@
 global:
-  scrape_interval: 10s
+  scrape_interval: 5s # Adjust as needed
 
 scrape_configs:
+  # Scrape metrics from the OpenTelemetry Collector
   - job_name: "otel-collector"
     static_configs:
-      - targets: ["otel-collector:9464"]
+      - targets: ["otel-collector:9464"] # Collects metrics from OTel Collector
