--- a/.github/workflows/deploy-grafana.yml
+++ b/.github/workflows/deploy-grafana.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Docker context and set in use
         run: |
           ssh-keyscan -H passman.live >> ~/.ssh/known_hosts
-          docker context create passman --docker "host=ssh://ubuntu@passman.live"
+          docker context create passman --docker "host=ssh://ec2-user@passman.live"
           docker context use passman
           # Check if the secret already exists
           if ! docker secret ls --filter name=grafana_password -q; then
@@ -29,9 +29,10 @@ jobs:
           fi
 
           # remove configs first
-          docker config rm grafana_otel_config
-          docker config rm grafana_prometheus_config
-          docker config rm grafana_tempo_config
+          # docker config rm grafana_otel_config
+          # docker config rm grafana_tempo_config
+          # docker config rm grafana_prometheus_config
+          # docker config rm grafana_loki_config
 
       - name: Docker stack deploy
         run: |
