--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "10001:10001"
       - "/var/tempo"
     volumes:
-      - tempo-storage:/var/tempo
+      - tempo-data:/var/tempo
 
   otel-collector:
     image: otel/opentelemetry-collector-contrib
