--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,6 +1,6 @@
 configs:
   tempo_config:
-    file: ./tempo.yaml
+    file: ./tempo.yml
 
   prometheus_config:
     file: ./prometheus.yml
@@ -12,16 +12,6 @@ configs:
     file: ./loki.yml
 
 services:
-  init:
-    image: &tempoImage grafana/tempo:latest
-    user: root
-    entrypoint:
-      - "chown"
-      - "10001:10001"
-      - "/var/tempo"
-    volumes:
-      - tempo-storage:/var/tempo
-
   grafana:
     image: grafana/grafana:11.5.2
     secrets:
@@ -65,17 +55,32 @@ services:
       - web
 
   loki:
-    image: grafana/loki:3.4
-    deploy:
-      update_config:
-        order: start-first
+    image: grafana/loki:2.9.2
+    user: "10001"
     configs:
       - source: loki_config
         target: /etc/loki/local-config.yaml
+    command: ["-config.file=/etc/loki/local-config.yaml"]
     volumes:
-      - loki-data:/var/loki
+      - loki-data:/loki
+    deploy:
+      update_config:
+        order: start-first
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
     networks:
       - web
+
+  init:
+    image: &tempoImage grafana/tempo:latest
+    user: root
+    entrypoint:
+      - "chown"
+      - "10001:10001"
+      - "/var/tempo"
+    volumes:
+      - tempo-data:/var/tempo
 
   tempo:
     image: *tempoImage
@@ -83,12 +88,18 @@ services:
       - source: tempo_config
         target: /etc/tempo.yaml
     volumes:
-      - tempo-data:/var/tempo/traces # Persistent storage
-    command: ["-config.file=/etc/tempo.yaml"]
+      - tempo-data:/var/tempo
     depends_on:
       - init
+    deploy:
+      update_config:
+        order: start-first
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
     networks:
       - web
+    command: ["-config.file=/etc/tempo.yaml"]
 
   prometheus:
     image: prom/prometheus:v2.47.0
